--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.9.1",
+    "@types/jest": "^26.0.15",
     "@types/node": "^12.19.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -19,6 +19,7 @@
     "axios": "^0.20.0",
     "date-fns": "^2.16.1",
     "formik": "^2.2.0",
+    "jest": "^24.9.0",
     "npm-watch": "^0.7.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -56,5 +57,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "check-prop-types": "^1.1.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5"
   }
 }
