--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.19.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.8",
     "axios": "^0.20.0",
@@ -23,6 +24,7 @@
     "npm-watch": "^0.7.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.4.4",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.3",
